--- a/src/app/admin/publicaciones/publicaciones.component.html
+++ b/src/app/admin/publicaciones/publicaciones.component.html
@@ -9,11 +9,11 @@
           </div>
           <div class="col-md-8 ps-3">
             <div class="card-body p-0">
-              <h3 class="card-title fw-bold">{{producto.name}}</h3>
+              <h3 class="card-title fw-bold pb-0 mb-0">{{producto.name}}</h3>
+              <h6 class="card-title fw-bold pt-0">{{producto.categoria.name}}</h6>
               <p class="card-text">
                 {{producto.description}}
               </p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="col-md-2 py-auto">
@@ -35,11 +35,11 @@
           </div>
           <div class="col-md-8 ps-3">
             <div class="card-body p-0">
-              <h3 class="card-title fw-bold">{{publicacion.producto.name}}</h3>
+              <h3 class="card-title fw-bold pb-0 mb-0">{{publicacion.producto.name}}</h3>
+              <h6 class="card-title fw-bold pt-0">{{publicacion.producto.categoria.name}}</h6>
               <p class="card-text">
                 {{publicacion.producto.description}}
               </p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="col-md-2">
