--- a/src/app/landing/components/general/general.component.html
+++ b/src/app/landing/components/general/general.component.html
@@ -1,5 +1,5 @@
 <div class="container-general">
-  <app-navbar></app-navbar>
+  <app-navbar style="background-color: blue;"></app-navbar>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
