--- a/src/app/admin/productos/productos.component.html
+++ b/src/app/admin/productos/productos.component.html
@@ -76,7 +76,7 @@
               <mat-label>Categoría:</mat-label>
               <mat-select formControlName="CATEGORY_PRODUCTS_id" name="cat">
                 <mat-option *ngFor="let categoria of categorias" [value]="categoria.id">
-                  {{categoria.name}}
+                  {{categoria.name}} <span *ngIf="categoria.categoria">({{categoria.categoria.name}})</span> 
                 </mat-option>
               </mat-select>
               <mat-error>
@@ -119,7 +119,7 @@
                   <img src="{{back}}/{{file.url}}" class="card-img-top" alt="...">
                   <div class="card-body p-0">
                     <div class="d-grid gap-2 m0">
-                      <button class="btn btn-outline-danger p-0" type="button">
+                      <button class="btn btn-outline-danger p-0" type="button" (click)="eliminarImgUpload(file.id)">
                         <i class="bi bi-trash3-fill"></i>
                       </button>
                     </div>
@@ -195,7 +195,7 @@
               <div class="card-footer border-0 bg-white py-1">
                 <div class="d-grid gap-2 mt-2">
                   <div class="btn-group" role="group" aria-label="Basic example">
-                    <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(producto)">
+                    <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(producto,i)">
                       <i class="bi bi-pencil-fill"></i>
                     </button>
                     <button class="btn btn-outline-danger btn-sm p-0 px-1" (click)="eliminar(producto.id)">
@@ -233,7 +233,7 @@
             <td>{{producto.precios[0].amount}}</td>
             <td>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(producto)">
+                <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(producto,i)">
                   <i class="bi bi-pencil-fill"></i>
                 </button>
                 <button class="btn btn-outline-danger btn-sm p-0 px-1" (click)="eliminar(producto.id)">
