--- a/src/app/landing/components/navbar/navbar.component.html
+++ b/src/app/landing/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light" style="z-index: 3;">
   <div class="container-fluid">
     <a class="navbar-brand title-page" routerLink="/">
       <img src="/assets/images/logo-icono.png" alt="EMODA ALPACAS" style="max-width: 100px" />
@@ -10,24 +10,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <!-- <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a> -->
+        <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
+        <a class="nav-link active" aria-current="page" routerLink="products">Productos</a>
       </div>
     </div>
-    <div class="d-flex btn-group">
-      <button class="btn btn-outline-dark bg-dark text-white dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="fs-4 bi bi-list-nested"></i>
-      </button>
-      <ul class="dropdown-menu dropdown-menu-end">
-        <li>
-          <button class="dropdown-item" routerLink="products">Todos los productos</button>
-        </li>
-        <li>
-          <!-- <button class="dropdown-item" type="button">Another action</button> -->
-        </li>
-        <li>
-          <!-- <button class="dropdown-item" type="button">Something else here</button> -->
-        </li>
-      </ul>
-    </div>
+    
   </div>
 </nav>
