agregando traduccion a la página

--- a/src/app/landing/pages/landing-principal/landing-principal.component.html
+++ b/src/app/landing/pages/landing-principal/landing-principal.component.html
@@ -1,20 +1,13 @@
 <section class="images">
-  <img src="/assets/images/wallpaper.jpeg" style="max-width: 100%;" alt="" />
+  <img src="/assets/images/wallpaper.jpeg" style="max-width: 100%" alt="" />
 </section>
 <!-- <h1 class="mt-5 mb-5 pt-5 ff-cl ff-italic text-center">Favoritos</h1> -->
 <app-section-cards [data]="data1" class="mb-5"></app-section-cards>
 <div class="row mt-5 mb-5">
   <div class="col-md-2"></div>
   <div class="col-md-8 text-center">
-    <h1 class="card-title mb-4 ff-arial">EMODA</h1>
-    <h4 class="ff-arial">
-      Entrepreneurship in the textile sector was born in 2003, Oscar and I created
-      Milagros crafts, our first products went to the local market, starting our own
-      identity, as a result of our experience in 2011 we created EMODAEIRL, name
-      made up of the initials From our family, our first participation in Peru Moda in the
-      same year gave us the vision to position our brand and our products nationally
-      and internationally.
-    </h4>
+    <h1 class="card-title mb-4 ff-arial" translate>landingPage.title</h1>
+    <p class="ff-arial" translate>landingPage.description</p>
   </div>
   <div class="col-md-2"></div>
 </div>
