--- a/src/app/landing/components/footer/footer.component.scss
+++ b/src/app/landing/components/footer/footer.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'emoda-font', Roboto;
 
   .footer-container {
     gap: 1rem;
