--- a/src/app/landing/components/navbar/navbar.component.html
+++ b/src/app/landing/components/navbar/navbar.component.html
@@ -1,11 +1,22 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand title-page" routerLink="/">
-      <img src="/assets/images/logo-icono.png" alt="EMODA ALPACAS" style="max-width: 100px" />
+      <img
+        src="/assets/images/logo-icono.png"
+        alt="EMODA ALPACAS"
+        style="max-width: 100px"
+      />
       <span class="ml-2">EMODA</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -14,12 +25,19 @@
       </div>
     </div>
     <div class="d-flex btn-group">
-      <button class="btn btn-outline-dark bg-dark text-white dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      <app-language-selector></app-language-selector>
+      <button
+        class="btn btn-outline-dark bg-dark text-white dropdown-toggle"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+      >
         <i class="fs-4 bi bi-list-nested"></i>
       </button>
       <ul class="dropdown-menu dropdown-menu-end">
         <li>
-          <button class="dropdown-item" routerLink="products">Todos los productos</button>
+          <button class="dropdown-item" routerLink="products">
+            Todos los productos
+          </button>
         </li>
         <li>
           <!-- <button class="dropdown-item" type="button">Another action</button> -->
