--- a/src/app/landing/components/footer/footer.component.html
+++ b/src/app/landing/components/footer/footer.component.html
@@ -13,9 +13,9 @@
     </div>
     <div class="w-100 info-footer">
       <div class="info-footer-container">
-        <h3 class="contact">Contáctenos</h3>
+        <h3 class="contact" translate>landingPage.contactenos</h3>
         <div class="contact-group">
-          <span>Celular:</span>
+          <span translate>landingPage.celular</span>
           <p class="text-center">
             <i class="bi bi-phone"></i>
             <a style="margin-left: 5px" href="tel:+51971140664"
@@ -24,7 +24,7 @@
           </p>
         </div>
         <div class="contact-group">
-          <span>Correo:</span>
+          <span translate>landingPage.email</span>
           <p class="text-center">
             <i class="bi bi-envelope"></i>
             <a
