--- a/src/app/landing/components/section-cards/section-cards.component.html
+++ b/src/app/landing/components/section-cards/section-cards.component.html
@@ -5,8 +5,8 @@
         <img [src]="'assets/pub/'+item.imagen" class="card-img-top" alt="...">
       </a>
       <div class="card-body">
-        <h5 class="card-title mb-0 fw-bold">{{item.titulo}}</h5>
-        <p class="card-text">
+        <h5 class="card-title mb-0 fw-bold ff-emoda">{{item.titulo}}</h5>
+        <p class="card-text ff-emoda">
           {{item.colores}}
         </p>
       </div>
