--- a/src/app/landing/components/show-product/show-product.component.html
+++ b/src/app/landing/components/show-product/show-product.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/pub/{{data.imagen}}" class="d-block w-100" alt="...">
+            <img src="assets/pub/{{data.imagen}}" class="d-block w-100" alt="..." loading="lazy">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
