--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -18,7 +18,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Emoda Admin</span>
+      <span>Admin.</span>
       <span class="example-spacer"></span>
       <span>
         {{user.firstName}} {{user.lastName}}
