--- a/src/app/landing/components/card-product/card-product.component.html
+++ b/src/app/landing/components/card-product/card-product.component.html
@@ -6,7 +6,7 @@
           <div class="carousel-inner">
             <div *ngFor="let img of product.imagenes; let i=index"
               class="{{(i==0) ? 'carousel-item active' : 'carousel-item'}}">
-              <img src="{{back}}/{{img.url}}" class="d-block w-100" alt="...">
+              <img src="{{back}}/{{img.url}}" class="d-block w-100" alt="..." loading="lazy">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>First slide label</h5> -->
                 <!-- <p>Some representative placeholder content for the first slide.</p> -->
@@ -29,18 +29,18 @@
       <div class="col-md-4">
         <div class="card-body">
           <div *ngIf="product">
-            <h1 class="card-title mb-4" style="color: #c1885b;">{{product.name}}</h1>
+            <h1 class="card-title mb-4 fw-bold" style="color: #c1885b;">{{product.name}}</h1>
             <h5 class="card-subtitle mb-0">
-              <span style="color: #c1885b;">Colores:</span>
+              <span style="color: #c1885b;" class="ff-emoda fw-bold" translate>landingPage.colors</span>
               {{product.colors}}
             </h5>
             <h5 class="card-subtitle mb-4">
-              <span style="color: #c1885b;">Tallas:</span>
+              <span style="color: #c1885b;" class="ff-emoda fw-bold" translate>landingPage.sizes</span>
               {{product.sizes}}
             </h5>
             <!-- <h3 class="card-subtitle mb-4" style="color: #c1885b;">$. {{data.costo}}</h3> -->
-            <h4 class="card-subtitle mb-1" style="color: #c1885b;">Descripción:</h4>
-            <p class="card-text" style="text-align: justify;">
+            <h4 class="card-subtitle mb-1 ff-emoda fw-bold" style="color: #c1885b;" translate>landingPage.descrip</h4>
+            <p class="card-text ff-emoda" style="text-align: justify;">
               {{product.description}}
             </p>
           </div>
@@ -49,3 +49,5 @@
     </div>
   </div>
 </mat-card>
+
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true" template = "<img src='/assets/images/spinner.gif' width='200px'>"><p style="color: white" > Loading... </p></ngx-spinner>
