--- a/src/app/landing/components/navbar/navbar.component.html
+++ b/src/app/landing/components/navbar/navbar.component.html
@@ -1,22 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-light" style="z-index: 3;">
   <div class="container-fluid">
     <a class="navbar-brand title-page" routerLink="/">
-      <img
-        src="/assets/images/logo-icono.png"
-        alt="EMODA ALPACAS"
-        style="max-width: 100px"
-      />
+      <img src="/assets/images/logo-icono.png" alt="EMODA ALPACAS" style="max-width: 100px" />
       <span class="ml-2">EMODA</span>
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -24,14 +13,11 @@
         <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
         <a class="nav-link active" aria-current="page" routerLink="products">Productos</a>
       </div>
-    </div>
+    </div> -->
     <div class="d-flex btn-group">
       <app-language-selector></app-language-selector>
-      <button
-        class="btn btn-outline-dark bg-dark text-white dropdown-toggle"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
-      >
+      <!-- <button class="btn btn-outline-dark bg-dark text-white dropdown-toggle" data-bs-toggle="dropdown"
+        aria-expanded="false">
         <i class="fs-4 bi bi-list-nested"></i>
       </button>
       <ul class="dropdown-menu dropdown-menu-end">
@@ -41,13 +27,13 @@
           </button>
         </li>
         <li>
-          <!-- <button class="dropdown-item" type="button">Another action</button> -->
+          <button class="dropdown-item" type="button">Another action</button>
         </li>
         <li>
-          <!-- <button class="dropdown-item" type="button">Something else here</button> -->
+          <button class="dropdown-item" type="button">Something else here</button>
         </li>
-      </ul>
+      </ul> -->
     </div>
-    
+
   </div>
 </nav>
