--- a/src/app/admin/publicaciones/publicaciones.component.html
+++ b/src/app/admin/publicaciones/publicaciones.component.html
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="col-md-2 py-auto">
-            <button class="btn btn-outline-success px-1" (click)="publicar(producto)"> Publicar
+            <button class="btn btn-outline-success px-3 py-1"  (click)="publicar(producto)"> Publicar
               <i class="bi bi-arrow-right-circle-fill z-2"></i>
             </button>
           </div>
