--- a/src/app/landing/components/navbar/navbar.component.html
+++ b/src/app/landing/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light" style="z-index: 3;">
   <div class="container-fluid">
-    <a class="navbar-brand title-page" routerLink="/">
+    <a class="navbar-brand title-page mx-auto" routerLink="/">
       <img src="/assets/images/logo-icono.png" alt="EMODA ALPACAS" style="max-width: 100px" />
       <span class="ml-2">EMODA</span>
     </a>
