--- a/src/app/admin/categorias/categorias.component.html
+++ b/src/app/admin/categorias/categorias.component.html
@@ -1,5 +1,5 @@
-<div class="row mt-2" [formGroup]="categoriaForm">
-  <div class="col-md-4">
+<div class="row mt-2">
+  <form class="col-md-4 col-sm-12 mb-sm-2" [formGroup]="categoriaForm" (ngSubmit)="guardar()">
     <h4 class="mb-1">Formulario de registro</h4>
     <div class="col-md-12">
       <mat-form-field appearance="fill" class="w-100">
@@ -13,7 +13,7 @@
     <div class="col-md-12">
       <mat-form-field appearance="fill" class="w-100">
         <mat-label>Categoría Padre:</mat-label>
-        <mat-select formControlName="parent_category_id" name="cat">
+        <mat-select formControlName="parent_category_id">
           <mat-option [value]="null">
             Sin categoría
           </mat-option>
@@ -63,33 +63,33 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-5">
+  </form>
+  <div class="col-md-5 col-sm-12 mt-2 mt-md-0">
     <table class="table table-sm">
       <thead>
-        <tr>
-          <th scope="col">N°</th>
-          <th scope="col">Categoria</th>
-          <th scope="col">Categoria Parent</th>
-          <th scope="col">Acciones</th>
-        </tr>
+      <tr>
+        <th scope="col">N°</th>
+        <th scope="col">Categoria</th>
+        <th scope="col">Categoria Parent</th>
+        <th scope="col">Acciones</th>
+      </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let categoria of categorias; let i=index">
-          <th scope="row">{{i+1}}</th>
-          <td>{{categoria.name}}</td>
-          <td> <span *ngIf="categoria.categoria">{{categoria.categoria.name}}</span></td>
-          <td>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(categoria)">
-                <i class="bi bi-pencil-fill"></i>
-              </button>
-              <button class="btn btn-outline-danger btn-sm p-0 px-1" (click)="eliminar(categoria.id)">
-                <i class="bi bi-trash3-fill"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
+      <tr *ngFor="let categoria of categorias; let i=index">
+        <th scope="row">{{i + 1}}</th>
+        <td>{{categoria.name}}</td>
+        <td><span *ngIf="categoria.categoria">{{categoria.categoria.name}}</span></td>
+        <td>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button class="btn btn-outline-primary btn-sm p-0 px-1" (click)="editarShow(categoria)">
+              <i class="bi bi-pencil-fill"></i>
+            </button>
+            <button class="btn btn-outline-danger btn-sm p-0 px-1" (click)="eliminar(categoria.id)">
+              <i class="bi bi-trash3-fill"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
       </tbody>
     </table>
   </div>
