--- a/src/app/admin/categorias/categorias.component.scss
+++ b/src/app/admin/categorias/categorias.component.scss
@@ -1,29 +1,35 @@
 .file-upload {
-    background-color: #ffffff;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
+  background-color: #ffffff;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .image-upload-wrap {
-    /*margin-top: 20px;*/
-    border: 1px solid #888787;
-    position: relative;
+  /*margin-top: 20px;*/
+  border: 1px solid #888787;
+  position: relative;
 }
 
 .image-dropping,
 .image-upload-wrap:hover {
-    background-color: #00000063;
-    border: 1px dashed #ffffff;
+  background-color: #00000063;
+  border: 1px dashed #ffffff;
 }
 
 .file-upload-input {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    outline: none;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.table {
+  th, td {
+    vertical-align: middle;
+  }
 }
