--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -1,7 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" style="background-color: #3f51b5;" fixedInViewport
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(isHandset$ | async) === false">
+               mode="side">
     <mat-toolbar class="text-white">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item *ngFor="let item of menu" [routerLink]="item.url" class="text-white p-2">
@@ -14,13 +13,12 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Admin.</span>
       <span class="example-spacer"></span>
-      <span>
+      <span class="username">
         {{user.firstName}} {{user.lastName}}
       </span>
       <button mat-icon-button matTooltip="Cerrar sesión" (click)="signout()">
