--- a/src/app/admin/components/nav/nav.component.scss
+++ b/src/app/admin/components/nav/nav.component.scss
@@ -23,3 +23,11 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.username {
+  display: none;
+
+  @media (min-width: 600px) {
+    display: block;
+  }
+}
